🌐 Translate internal links to English and change color to light blue
- Translate all internal link texts from Portuguese to English
- Change link color from orange (#ff6b35) to light blue (#4A9EFF)
- Update links in singleblog.html, index.html, and about.html

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         </div>
                         <div class="mission-content">
                             <div class="mission-text-box">
-                                <p class="mission-paragraph">Wevolv3 is a Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality. We specialize in helping crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns. <a href="about.html" style="color: #ff6b35; text-decoration: underline;">Learn more about us</a> or <a href="works.html" style="color: #ff6b35; text-decoration: underline;">view our portfolio</a>.</p>
+                                <p class="mission-paragraph">Wevolv3 is a Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality. We specialize in helping crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns. <a href="about.html" style="color: #4A9EFF; text-decoration: underline;">Learn more about us</a> or <a href="works.html" style="color: #4A9EFF; text-decoration: underline;">view our portfolio</a>.</p>
                                 <div class="mission-orange-box"></div>
                             </div>
                             <img src="images/ab1.jpg"  alt="" class="mission-img" />
@@ -329,7 +329,7 @@
                             <img src="images/ab2.jpg"  alt="" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.jpg';" />
                             <div class="mission-text-box">
                                 <div class="mission-orange-box mission-transparent"></div>
-                                <p class="mission-paragraph mission-paragraph-right">We believe in modular advertising - creating flexible, scalable marketing solutions that adapt to the unique needs of each project. Our team combines deep expertise in Web3 technologies with proven marketing strategies to deliver results that matter.</p>
+                                <p class="mission-paragraph mission-paragraph-right">We believe in modular advertising - creating flexible, scalable marketing solutions that adapt to the unique needs of each project. Our team combines deep expertise in Web3 technologies with proven marketing strategies to deliver results that matter. Explore our <a href="blog.html" style="color: #4A9EFF; text-decoration: underline;">marketing insights</a> and strategies.</p>
                             </div>
                         </div>
                     </div>
