--- a/singleblog.html
+++ b/singleblog.html
@@ -376,12 +376,12 @@
                         </div>
                         <!-- Links internos estratégicos adicionados dinamicamente -->
                         <div id="internal-links" style="margin-top: 40px; padding-top: 30px; border-top: 1px solid #333; display: none;">
-                            <p style="color: #999; font-size: 14px; margin-bottom: 15px;">Explore mais conteúdo:</p>
+                            <p style="color: #999; font-size: 14px; margin-bottom: 15px;">Explore more content:</p>
                             <ul style="list-style: none; padding: 0;">
-                                <li style="margin-bottom: 10px;"><a href="blog.html" style="color: #ff6b35; text-decoration: underline;">← Voltar para o Blog</a></li>
-                                <li style="margin-bottom: 10px;"><a href="works.html" style="color: #ff6b35; text-decoration: underline;">Ver nossos projetos</a></li>
-                                <li style="margin-bottom: 10px;"><a href="about.html" style="color: #ff6b35; text-decoration: underline;">Sobre a Wevolv3</a></li>
-                                <li><a href="contact.html" style="color: #ff6b35; text-decoration: underline;">Entre em contato</a></li>
+                                <li style="margin-bottom: 10px;"><a href="blog.html" style="color: #4A9EFF; text-decoration: underline;">← Back to Blog</a></li>
+                                <li style="margin-bottom: 10px;"><a href="works.html" style="color: #4A9EFF; text-decoration: underline;">View our portfolio</a></li>
+                                <li style="margin-bottom: 10px;"><a href="about.html" style="color: #4A9EFF; text-decoration: underline;">About Wevolv3</a></li>
+                                <li><a href="contact.html" style="color: #4A9EFF; text-decoration: underline;">Get in touch</a></li>
                             </ul>
                         </div>
                     </div>
