--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                         </div>
                         <div class="mission-content">
                             <div class="mission-text-box">
-                                <p class="mission-paragraph">Wevolv3 is a Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality. We specialize in helping crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns. <a href="works.html" style="color: #ff6b35; text-decoration: underline;">View our portfolio</a> to see our work in action.</p>
+                                <p class="mission-paragraph">Wevolv3 is a Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality. We specialize in helping crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns. <a href="works.html" style="color: #4A9EFF; text-decoration: underline;">View our portfolio</a> to see our work in action.</p>
                                 <div class="mission-orange-box"></div>
                             </div>
                             <img src="images/ab1.jpg"  alt="Wevolv3 Web3 Marketing Agency Team" class="mission-img" />
@@ -141,7 +141,7 @@
                             <img src="images/ab2.jpg"  alt="Wevolv3 Vision - Modular Advertising Solutions" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.jpg';" />
                             <div class="mission-text-box">
                                 <div class="mission-orange-box mission-transparent"></div>
-                                <p class="mission-paragraph mission-paragraph-right">We believe in modular advertising - creating flexible, scalable marketing solutions that adapt to the unique needs of each project. Our team combines deep expertise in Web3 technologies with proven marketing strategies to deliver results that matter. Learn more about our <a href="blog.html" style="color: #ff6b35; text-decoration: underline;">marketing insights</a> and strategies.</p>
+                                <p class="mission-paragraph mission-paragraph-right">We believe in modular advertising - creating flexible, scalable marketing solutions that adapt to the unique needs of each project. Our team combines deep expertise in Web3 technologies with proven marketing strategies to deliver results that matter. Learn more about our <a href="blog.html" style="color: #4A9EFF; text-decoration: underline;">marketing insights</a> and strategies.</p>
                             </div>
                         </div>
                     </div>
