--- a/singlework.html
+++ b/singlework.html
@@ -45,6 +45,83 @@
 
         <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
         <link href="images/favicon.png" rel="apple-touch-icon" />
+        
+        <style>
+            /* Mobile Responsiveness - Fix text cutting on mobile */
+            @media screen and (max-width: 767px) {
+                .main-container {
+                    padding-left: 20px !important;
+                    padding-right: 20px !important;
+                }
+                .sigle-work-section {
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                }
+                .single-work-grid {
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                    overflow-x: visible !important;
+                }
+                .single-work-left,
+                .single-work-right {
+                    padding-left: 20px !important;
+                    padding-right: 20px !important;
+                    overflow-x: visible !important;
+                    max-width: 100% !important;
+                }
+                .single-details-text {
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                    overflow-x: visible !important;
+                    word-wrap: break-word !important;
+                    max-width: 100% !important;
+                }
+                #work-description {
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                    overflow-x: visible !important;
+                    word-wrap: break-word !important;
+                    max-width: 100% !important;
+                    box-sizing: border-box !important;
+                }
+                .single-main-title-heading {
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                    word-wrap: break-word !important;
+                    overflow-x: visible !important;
+                }
+                .single-left-grid {
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                    overflow-x: visible !important;
+                }
+                .single-left-item {
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                    overflow-x: visible !important;
+                }
+            }
+            
+            @media screen and (max-width: 479px) {
+                .main-container {
+                    padding-left: 15px !important;
+                    padding-right: 15px !important;
+                }
+                .single-work-left,
+                .single-work-right {
+                    padding-left: 15px !important;
+                    padding-right: 15px !important;
+                }
+                .single-details-text {
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                }
+                #work-description {
+                    padding-left: 0 !important;
+                    padding-right: 0 !important;
+                }
+            }
+        </style>
 
     </head>
 
