--- a/singlework.html
+++ b/singlework.html
@@ -77,6 +77,23 @@
                 object-fit: cover;
                 max-width: 100%;
             }
+            /* Prevent ghost/flash images on page load */
+            #work-image,
+            #work-image-mobile-img {
+                opacity: 0 !important;
+                visibility: hidden;
+                transition: opacity 0.3s ease-in, visibility 0.3s ease-in;
+            }
+            #work-image.loaded,
+            #work-image-mobile-img.loaded {
+                opacity: 1 !important;
+                visibility: visible;
+            }
+            /* Hide images until JavaScript loads them */
+            .single-work-right img:not([src*="sanity.io"]):not([src*="data:image"]),
+            .work-image-mobile img:not([src*="sanity.io"]):not([src*="data:image"]) {
+                display: none !important;
+            }
             .sitemap {
                 position: relative;
             }
@@ -207,10 +224,11 @@
             <div id="work-image-mobile" class="work-image-mobile" style="display: none;">
                 <img
                     id="work-image-mobile-img"
-                    src="images/work7.jpg"
+                    src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1' height='1'%3E%3C/svg%3E"
                     alt=""
                     class="single-main-work-img-mobile"
                     loading="lazy"
+                    style="opacity: 0;"
                 />
             </div>
         </div>
@@ -260,10 +278,11 @@
                     <div class="single-work-right">
                         <img
                             id="work-image"
-                            src="images/work7.jpg"
+                            src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1' height='1'%3E%3C/svg%3E"
                             alt=""
                             class="single-main-work-img"
                             loading="lazy"
+                            style="opacity: 0;"
                         />
                     </div>
                 </div>
@@ -528,12 +547,43 @@
                     // Update image (both desktop and mobile)
                     const imageUrl = sanityImageUrl(work.mainImage);
                     const workImage = document.getElementById('work-image');
+                    
+                    // Hide image until loaded to prevent ghost/flash
+                    workImage.style.opacity = '0';
+                    workImage.style.visibility = 'hidden';
+                    workImage.onload = function() {
+                        this.style.opacity = '1';
+                        this.style.visibility = 'visible';
+                        this.style.transition = 'opacity 0.3s ease-in, visibility 0.3s ease-in';
+                        this.classList.add('loaded');
+                    };
+                    workImage.onerror = function() {
+                        // If image fails to load, still show it (fallback)
+                        this.style.opacity = '1';
+                        this.style.visibility = 'visible';
+                        this.classList.add('loaded');
+                    };
                     workImage.src = imageUrl;
                     workImage.alt = work.title || 'Project image';
                     
                     // Update mobile image in header
                     const workImageMobile = document.getElementById('work-image-mobile-img');
                     if (workImageMobile) {
+                        // Hide image until loaded to prevent ghost/flash
+                        workImageMobile.style.opacity = '0';
+                        workImageMobile.style.visibility = 'hidden';
+                        workImageMobile.onload = function() {
+                            this.style.opacity = '1';
+                            this.style.visibility = 'visible';
+                            this.style.transition = 'opacity 0.3s ease-in, visibility 0.3s ease-in';
+                            this.classList.add('loaded');
+                        };
+                        workImageMobile.onerror = function() {
+                            // If image fails to load, still show it (fallback)
+                            this.style.opacity = '1';
+                            this.style.visibility = 'visible';
+                            this.classList.add('loaded');
+                        };
                         workImageMobile.src = imageUrl;
                         workImageMobile.alt = work.title || 'Project image';
                         // Show mobile image container
