--- a/index.html
+++ b/index.html
@@ -108,6 +108,25 @@
             body {
                 cursor: auto !important;
             }
+            
+            /* Standardize work image dimensions - All images same size */
+            .work-img-wrapp {
+                width: 100%;
+                height: 0;
+                padding-bottom: 75%; /* 4:3 aspect ratio - adjust if needed (56.25% for 16:9) */
+                position: relative;
+                overflow: hidden;
+                background-color: #000;
+            }
+            .work-img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center;
+            }
         </style>
 
     </head>
