--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
                 position: relative;
                 overflow: hidden;
                 background-color: #000;
+                border-radius: 12px;
+                border: 1px solid #10b981;
             }
             .work-img {
                 position: absolute;
@@ -126,6 +128,7 @@
                 height: 100%;
                 object-fit: cover;
                 object-position: center;
+                border-radius: 12px;
             }
         </style>
 
