--- a/works.html
+++ b/works.html
@@ -70,6 +70,8 @@
                 position: relative;
                 overflow: hidden;
                 background-color: #000;
+                border-radius: 12px;
+                border: 1px solid #10b981;
             }
             .work-img {
                 position: absolute;
@@ -79,6 +81,7 @@
                 height: 100%;
                 object-fit: cover;
                 object-position: center;
+                border-radius: 12px;
             }
         </style>
 
