--- a/singlework.html
+++ b/singlework.html
@@ -76,6 +76,14 @@
                 display: block;
                 object-fit: cover;
                 max-width: 100%;
+                border-radius: 8px;
+                border: 1px solid #10b981;
+            }
+            
+            /* Desktop Image - Single Work Page */
+            .single-main-work-img {
+                border-radius: 8px;
+                border: 1px solid #10b981;
             }
             /* Prevent ghost/flash images on page load */
             #work-image,
