📝 Update: Altera texto da seção work para 'Some of our previous work'
- Substitui 'Who We are and what we do' por 'Some of our previous work'
- Texto mais adequado para a seção de projetos

--- a/works.html
+++ b/works.html
@@ -114,7 +114,7 @@
             <div class="w-layout-blockcontainer main-container w-container">
                 <div class="inner-sitemap">
                     <h2 data-w-id="darkyn25" style="opacity: 0;" class="sitemap-heading">work</h2>
-                    <div data-w-id="darkyn26" style="opacity: 0;" class="stemap-text">Who We are and what we do</div>
+                    <div data-w-id="darkyn26" style="opacity: 0;" class="stemap-text">Some of our previous work</div>
                 </div>
             </div>
         </div>
