📝 Update: Atualiza textos de Mission e Vision
- Substitui textos antigos pelos novos textos em inglês
- Mission: foco em pain points e estratégias de crescimento
- Vision: foco em desafios do ecossistema Web3 e adoção
- Atualizado em index.html e about.html

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         </div>
                         <div class="mission-content">
                             <div class="mission-text-box">
-                                <p class="mission-paragraph">Wevolv3 is a Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality. We specialize in helping crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns. <a href="about.html" style="color: #4A9EFF; text-decoration: underline;">Learn more about us</a> or <a href="works.html" style="color: #4A9EFF; text-decoration: underline;">view our portfolio</a>.</p>
+                                <p class="mission-paragraph">Our mission is to directly address the main pain points of Web3 projects, including the challenge of attracting qualified users, low community engagement, unclear messaging, difficulties in building trust, and underperforming conversion rates. We focus on identifying these bottlenecks, reshaping the narrative, and executing strategies that remove friction, increase relevance, and turn effort into real, consistent growth.</p>
                                 <div class="mission-orange-box"></div>
                             </div>
                             <img src="images/ab1.jpg"  alt="" class="mission-img" />
@@ -352,7 +352,7 @@
                             <img src="images/ab2.jpg"  alt="" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.jpg';" />
                             <div class="mission-text-box">
                                 <div class="mission-orange-box mission-transparent"></div>
-                                <p class="mission-paragraph mission-paragraph-right">We believe in modular advertising - creating flexible, scalable marketing solutions that adapt to the unique needs of each project. Our team combines deep expertise in Web3 technologies with proven marketing strategies to deliver results that matter. Explore our <a href="blog.html" style="color: #4A9EFF; text-decoration: underline;">marketing insights</a> and strategies.</p>
+                                <p class="mission-paragraph mission-paragraph-right">Our vision is grounded in a clear understanding of the challenges that hold the Web3 ecosystem back, where strong ideas struggle to gain traction, visibility fails to translate into retention, and communities do not evolve into real adoption. We aim to change this landscape by helping projects overcome these pain points consistently, building solid foundations for sustainable growth, continuous adoption, and genuine connections with the right audience.</p>
                             </div>
                         </div>
                     </div>
