--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="mission-content">
                             <div class="mission-text-box">
-                                <p class="mission-paragraph">Wevolv3 is a Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality. We specialize in helping crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns. <a href="works.html" style="color: #4A9EFF; text-decoration: underline;">View our portfolio</a> to see our work in action.</p>
+                                <p class="mission-paragraph">Our mission is to directly address the main pain points of Web3 projects, including the challenge of attracting qualified users, low community engagement, unclear messaging, difficulties in building trust, and underperforming conversion rates. We focus on identifying these bottlenecks, reshaping the narrative, and executing strategies that remove friction, increase relevance, and turn effort into real, consistent growth.</p>
                                 <div class="mission-orange-box"></div>
                             </div>
                             <img src="images/ab1.jpg"  alt="Wevolv3 Web3 Marketing Agency Team" class="mission-img" />
@@ -130,7 +130,7 @@
                             <img src="images/ab2.jpg"  alt="Wevolv3 Vision - Modular Advertising Solutions" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.jpg';" />
                             <div class="mission-text-box">
                                 <div class="mission-orange-box mission-transparent"></div>
-                                <p class="mission-paragraph mission-paragraph-right">We believe in modular advertising - creating flexible, scalable marketing solutions that adapt to the unique needs of each project. Our team combines deep expertise in Web3 technologies with proven marketing strategies to deliver results that matter. Learn more about our <a href="blog.html" style="color: #4A9EFF; text-decoration: underline;">marketing insights</a> and strategies.</p>
+                                <p class="mission-paragraph mission-paragraph-right">Our vision is grounded in a clear understanding of the challenges that hold the Web3 ecosystem back, where strong ideas struggle to gain traction, visibility fails to translate into retention, and communities do not evolve into real adoption. We aim to change this landscape by helping projects overcome these pain points consistently, building solid foundations for sustainable growth, continuous adoption, and genuine connections with the right audience.</p>
                             </div>
                         </div>
                     </div>
