📝 Update: Atualiza textos de Mission e Vision com versões melhoradas
- Mission: foco em pontos de fricção e execução precisa
- Vision: foco em ideias fortes vs. tração e adoção ativa
- Textos mais diretos e impactantes
- Atualizado em index.html e about.html

--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="mission-content">
                             <div class="mission-text-box">
-                                <p class="mission-paragraph">Our mission is to directly address the main pain points of Web3 projects, including the challenge of attracting qualified users, low community engagement, unclear messaging, difficulties in building trust, and underperforming conversion rates. We focus on identifying these bottlenecks, reshaping the narrative, and executing strategies that remove friction, increase relevance, and turn effort into real, consistent growth.</p>
+                                <p class="mission-paragraph">We understand, hands-on, where Web3 projects get stuck. A lack of truly qualified users, weak community engagement, unclear messaging, difficulty building trust, and marketing efforts that fail to convert into growth. Our focus is on acting precisely at these friction points, refining narrative, positioning, and execution to turn attention into real adoption and consistent results.</p>
                                 <div class="mission-orange-box"></div>
                             </div>
                             <img src="images/ab1.jpg"  alt="Wevolv3 Web3 Marketing Agency Team" class="mission-img" />
@@ -130,7 +130,7 @@
                             <img src="images/ab2.jpg"  alt="Wevolv3 Vision - Modular Advertising Solutions" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.jpg';" />
                             <div class="mission-text-box">
                                 <div class="mission-orange-box mission-transparent"></div>
-                                <p class="mission-paragraph mission-paragraph-right">Our vision is grounded in a clear understanding of the challenges that hold the Web3 ecosystem back, where strong ideas struggle to gain traction, visibility fails to translate into retention, and communities do not evolve into real adoption. We aim to change this landscape by helping projects overcome these pain points consistently, building solid foundations for sustainable growth, continuous adoption, and genuine connections with the right audience.</p>
+                                <p class="mission-paragraph mission-paragraph-right">We start from the understanding that strong ideas are not enough when traction is missing, visibility does not translate into retention, and communities fail to evolve into active usage. We work to change this reality by helping projects overcome these challenges in a consistent and strategic way, building solid foundations for sustainable growth, ongoing adoption, and genuine connections with the right audience.</p>
                             </div>
                         </div>
                     </div>
