🖼️ Fix: Adiciona parâmetro de versão nas imagens Mission/Vision
- Adiciona ?v=2 para forçar recarregamento e evitar cache
- Adiciona alt text descritivo nas imagens
- Atualiza fallback também com parâmetro de versão

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                 <p class="mission-paragraph">We understand, hands-on, where Web3 projects get stuck. A lack of truly qualified users, weak community engagement, unclear messaging, difficulty building trust, and marketing efforts that fail to convert into growth. Our focus is on acting precisely at these friction points, refining narrative, positioning, and execution to turn attention into real adoption and consistent results.</p>
                                 <div class="mission-orange-box"></div>
                             </div>
-                            <img src="images/ab1.png"  alt="" class="mission-img" />
+                            <img src="images/ab1.png?v=2" alt="Wevolv3 Mission - Web3 Marketing Solutions" class="mission-img" />
                         </div>
                     </div>
                     <div data-w-id="darkyn24" style="opacity: 0;" class="mission-right">
@@ -349,7 +349,7 @@
                             <img src="images/plus.png"  alt="" class="mission-plus mission-plus-right" />
                         </div>
                         <div class="mission-content">
-                            <img src="images/ab2.png"  alt="" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.png';" />
+                            <img src="images/ab2.png?v=2" alt="Wevolv3 Vision - Sustainable Growth and Adoption" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.png?v=2';" />
                             <div class="mission-text-box">
                                 <div class="mission-orange-box mission-transparent"></div>
                                 <p class="mission-paragraph mission-paragraph-right">We start from the understanding that strong ideas are not enough when traction is missing, visibility does not translate into retention, and communities fail to evolve into active usage. We work to change this reality by helping projects overcome these challenges in a consistent and strategic way, building solid foundations for sustainable growth, ongoing adoption, and genuine connections with the right audience.</p>
