--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
             <div class="w-layout-blockcontainer main-container w-container">
                 <h2 class="main-title">who we are</h2>
                 <div class="mission-grid">
-                    <div data-w-id="darkyn09" style="opacity: 0;" class="mission-left">
+                    <div data-w-id="darkyn09" style="opacity: 1;" class="mission-left">
                         <div class="mission-title">
                             <img src="images/plus.png"  alt="Plus icon" class="mission-plus" />
                             <h4 class="mission-heading">
@@ -115,10 +115,10 @@
                                 <p class="mission-paragraph">We understand, hands-on, where Web3 projects get stuck. A lack of truly qualified users, weak community engagement, unclear messaging, difficulty building trust, and marketing efforts that fail to convert into growth. Our focus is on acting precisely at these friction points, refining narrative, positioning, and execution to turn attention into real adoption and consistent results.</p>
                                 <div class="mission-orange-box"></div>
                             </div>
-                            <img src="images/ab1.png"  alt="Wevolv3 Web3 Marketing Agency Team" class="mission-img" />
+                            <img src="images/ab1.png?v=4" alt="Wevolv3 Web3 Marketing Agency Team" class="mission-img" />
                         </div>
                     </div>
-                    <div data-w-id="darkyn24" style="opacity: 0;" class="mission-right">
+                    <div data-w-id="darkyn24" style="opacity: 1;" class="mission-right">
                         <div class="mission-title mission-title-right">
                             <h4 class="mission-heading mission-heading-right">
                                 Our<br />
@@ -127,7 +127,7 @@
                             <img src="images/plus.png"  alt="Plus icon" class="mission-plus mission-plus-right" />
                         </div>
                         <div class="mission-content">
-                            <img src="images/ab2.png"  alt="Wevolv3 Vision - Modular Advertising Solutions" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.png';" />
+                            <img src="images/ab2.png?v=4" alt="Wevolv3 Vision - Modular Advertising Solutions" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.png?v=4';" />
                             <div class="mission-text-box">
                                 <div class="mission-orange-box mission-transparent"></div>
                                 <p class="mission-paragraph mission-paragraph-right">We start from the understanding that strong ideas are not enough when traction is missing, visibility does not translate into retention, and communities fail to evolve into active usage. We work to change this reality by helping projects overcome these challenges in a consistent and strategic way, building solid foundations for sustainable growth, ongoing adoption, and genuine connections with the right audience.</p>
