🖼️ Update: Usa 3 imagens de autor aleatoriamente nos posts
- Adiciona author1.jpeg, author2.png, author3.jpeg
- Posts dinâmicos selecionam imagem aleatória ao renderizar
- Posts estáticos atualizados via JavaScript
- Todas as imagens de autor agora usam as 3 imagens do touro aleatoriamente

--- a/blog.html
+++ b/blog.html
@@ -280,6 +280,10 @@
                 const isDraft = previewMode && (!post.published || post.published === false);
                 const previewParam = previewMode ? '&preview=true' : '';
                 
+                // Seleciona aleatoriamente uma das 3 imagens de autor
+                const authorImages = ['images/author1.jpeg', 'images/author2.png', 'images/author3.jpeg'];
+                const randomAuthorImage = authorImages[Math.floor(Math.random() * authorImages.length)];
+                
                 return `
                     <div role="listitem" class="w-dyn-item">
                         <a
@@ -292,7 +296,7 @@
                                 <div class="blog-category">${isDraft ? '🔒 DRAFT - ' : ''}${category}</div>
                                 <h2 class="blog-heading">${title}</h2>
                                 <div class="blog-author-and-arrow">
-                                    <img src="images/author1.png" alt="Wevolv3 Author" class="blog-author" />
+                                    <img src="${randomAuthorImage}" alt="Wevolv3 Author" class="blog-author" />
                                     <div class="blog-arrow">
                                         <img src="images/bend-up-right-light.png" alt="Arrow icon" class="blog-arrow-icon" />
                                     </div>
