✨ Update: Atualizações completas - Tagline, Solutions e Imagens de Autor
- Troca tagline hero: 'STRATEGIC, MODULAR MARKETING. ATTENTION INTO RESULTS.'
- Atualiza meta tags (OG, Twitter, Schema.org) com nova tagline
- Troca 'services' para 'solutions' na seção principal
- Adiciona imagens de autor: author1.jpeg, author2.png, author3.jpeg
- Remove imagens antigas: author1.png, author3.png
- Implementa seleção aleatória de imagens de autor nos posts
- Posts dinâmicos e estáticos agora usam as 3 imagens aleatoriamente

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://wevolv3.com/">
         <meta property="og:title" content="Wevolv3 - Web3 Marketing & Modular Advertising Agency">
-        <meta property="og:description" content="Transforming Your Vision into Digital Reality. We help crypto, DeFi, and blockchain projects grow through innovative marketing strategies.">
+        <meta property="og:description" content="Strategic, modular marketing. Attention into results. We help crypto, DeFi, and blockchain projects grow through innovative marketing strategies.">
         <meta property="og:image" content="https://wevolv3.com/images/LOGO.PNG">
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="630">
@@ -32,7 +32,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:url" content="https://wevolv3.com/">
         <meta name="twitter:title" content="Wevolv3 - Web3 Marketing & Modular Advertising Agency">
-        <meta name="twitter:description" content="Transforming Your Vision into Digital Reality. We help crypto, DeFi, and blockchain projects grow through innovative marketing strategies.">
+        <meta name="twitter:description" content="Strategic, modular marketing. Attention into results. We help crypto, DeFi, and blockchain projects grow through innovative marketing strategies.">
         <meta name="twitter:image" content="https://wevolv3.com/images/LOGO.PNG">
         
         <!-- Canonical URL -->
@@ -55,7 +55,7 @@
           "name": "Wevolv3",
           "url": "https://wevolv3.com",
           "logo": "https://wevolv3.com/images/LOGO.PNG",
-          "description": "Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality.",
+          "description": "Web3 Marketing & Modular Advertising Agency. Strategic, modular marketing. Attention into results.",
           "sameAs": [
             "https://x.com/wevolv3",
             "https://www.linkedin.com/company/wevol3-web3-marketing",
@@ -211,8 +211,8 @@
                             <img src="images/arrow-right.png"  alt="" class="hero-proect-link-arrow" />
                         </a>
                         <div class="hero-under-text">
-                            Transforming Your Vision<br />
-                            into Digital Reality.
+                            STRATEGIC, MODULAR MARKETING.<br />
+                            ATTENTION INTO RESULTS.
                         </div>
                     </div>
                     <div id="darkyn21" class="hero-right">
@@ -270,7 +270,7 @@
 
         <div class="services-section">
             <div class="w-layout-blockcontainer main-container w-container">
-                <h2 class="main-title">services</h2>
+                <h2 class="main-title">solutions</h2>
                 <div class="services-wrapp">
                     <div data-w-id="darkyn10" style="opacity: 0;" class="services-item">
                         <div class="service-nunmber">01</div>
