📝 Update: Troca 'All Projects' por 'MORE PREVIOUS WORKS' na seção work

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
                 <div class="main-title-box">
                     <h2 class="main-title">work</h2>
-                    <a href="works.html" class="all-projects">All Projects</a>
+                    <a href="works.html" class="all-projects">MORE PREVIOUS WORKS</a>
                 </div>
 
                 <div class="work-wrapper w-dyn-list">
