--- a/index.html
+++ b/index.html
@@ -911,17 +911,35 @@
                 let startY = 0;
                 let startScrollLeft = 0;
                 let isHorizontal = false;
+                let velocity = 0;
+                let lastX = 0;
+                let lastTime = 0;
+                let momentumAnimation = null;
+
+                // Sensibilidade aumentada para melhor responsividade
+                const SENSITIVITY = 1.8;
+                const THRESHOLD = 3; // Reduzido de 6 para 3 para detectar movimento mais rápido
 
                 function onPointerDown(e) {
                     // Only react to primary button for mouse
                     if (e.pointerType === 'mouse' && e.button !== 0) return;
 
+                    // Cancelar momentum anterior se houver
+                    if (momentumAnimation) {
+                        cancelAnimationFrame(momentumAnimation);
+                        momentumAnimation = null;
+                    }
+
                     isDown = true;
                     isHorizontal = false;
                     startX = e.clientX;
                     startY = e.clientY;
+                    lastX = e.clientX;
+                    lastTime = Date.now();
                     startScrollLeft = scroller.scrollLeft;
+                    velocity = 0;
                     scroller.classList.add('dragging');
+                    scroller.style.scrollBehavior = 'auto'; // Desabilitar smooth scroll durante drag
 
                     try {
                         scroller.setPointerCapture(e.pointerId);
@@ -935,12 +953,22 @@
 
                     const dx = e.clientX - startX;
                     const dy = e.clientY - startY;
+                    const now = Date.now();
+                    const timeDelta = now - lastTime;
+
+                    // Calcular velocidade para momentum
+                    if (timeDelta > 0) {
+                        const moveDelta = e.clientX - lastX;
+                        velocity = moveDelta / timeDelta;
+                    }
+                    lastX = e.clientX;
+                    lastTime = now;
 
                     // Decide intent once, then stick to it
                     if (!isHorizontal) {
-                        if (Math.abs(dx) > 6 && Math.abs(dx) > Math.abs(dy)) {
+                        if (Math.abs(dx) > THRESHOLD && Math.abs(dx) > Math.abs(dy)) {
                             isHorizontal = true;
-                        } else if (Math.abs(dy) > 6 && Math.abs(dy) > Math.abs(dx)) {
+                        } else if (Math.abs(dy) > THRESHOLD && Math.abs(dy) > Math.abs(dx)) {
                             // User is scrolling vertically; stop dragging
                             onPointerUp(e);
                             return;
@@ -951,21 +979,59 @@
 
                     // Prevent the page from scrolling while dragging horizontally
                     if (e.cancelable) e.preventDefault();
-                    scroller.scrollLeft = startScrollLeft - dx;
+                    
+                    // Aplicar scroll com sensibilidade aumentada
+                    scroller.scrollLeft = startScrollLeft - (dx * SENSITIVITY);
                 }
 
                 function onPointerUp(e) {
                     if (!isDown) return;
                     isDown = false;
-                    isHorizontal = false;
                     scroller.classList.remove('dragging');
+                    scroller.style.scrollBehavior = 'smooth'; // Reabilitar smooth scroll
 
                     try {
                         scroller.releasePointerCapture(e.pointerId);
                     } catch (_) {
                         // ignore
                     }
+
+                    // Aplicar momentum se houver velocidade suficiente
+                    if (Math.abs(velocity) > 0.1 && isHorizontal) {
+                        applyMomentum(velocity);
+                    } else {
+                        isHorizontal = false;
+                        velocity = 0;
+                    }
                 }
+
+                function applyMomentum(initialVelocity) {
+                    const friction = 0.92; // Fator de atrito
+                    let currentVelocity = initialVelocity * 15; // Multiplicador para momentum
+
+                    function animate() {
+                        if (Math.abs(currentVelocity) < 0.1) {
+                            momentumAnimation = null;
+                            isHorizontal = false;
+                            return;
+                        }
+
+                        scroller.scrollLeft -= currentVelocity;
+                        currentVelocity *= friction;
+
+                        momentumAnimation = requestAnimationFrame(animate);
+                    }
+
+                    momentumAnimation = requestAnimationFrame(animate);
+                }
+
+                // Suporte para scroll com mouse wheel
+                scroller.addEventListener('wheel', (e) => {
+                    if (Math.abs(e.deltaX) > Math.abs(e.deltaY)) {
+                        e.preventDefault();
+                        scroller.scrollLeft += e.deltaX * 0.8; // Sensibilidade do wheel
+                    }
+                }, {passive: false});
 
                 scroller.addEventListener('pointerdown', onPointerDown);
                 scroller.addEventListener('pointermove', onPointerMove, {passive: false});
