📄 Adiciona links legais no rodapé e cria página Legal Disclaimer
- Adiciona seção de links legais no rodapé de todas as páginas principais
- Links para: Privacy Policy, Terms & Conditions, Legal Disclaimer
- Cria página disclaimer.html com conteúdo completo de Aviso Legal
- Adiciona CSS para estilizar links legais (desktop e mobile)
- Atualiza sitemap para incluir disclaimer.html
- Conformidade com requisitos AdSense e melhora credibilidade do site

--- a/works.html
+++ b/works.html
@@ -180,6 +180,16 @@
                         </a>
                     </div>
                 </div>
+                
+                <!-- Footer Legal Links -->
+                <div class="footer-legal-links">
+                    <a href="privacy.html" class="legal-link">Privacy Policy</a>
+                    <span class="legal-separator">|</span>
+                    <a href="terms.html" class="legal-link">Terms & Conditions</a>
+                    <span class="legal-separator">|</span>
+                    <a href="disclaimer.html" class="legal-link">Legal Disclaimer</a>
+                </div>
+                
                 <div class="copyright">
                     <div data-w-id="darkyn05" class="copyright-text">
                         2025 Wevolv3. All rights reserved.
