--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,14 +1,44 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html data-wf-page="667187163156a5df09557ed5" lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Legal Disclaimer | Wevolv3</title>
   <meta name="description" content="Wevolv3 Legal Disclaimer - Important information about our services, content, and limitations of liability." />
-  <link rel="icon" href="images/favicon.png" type="image/png" />
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://wevolv3.com/disclaimer.html">
+  
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://wevolv3.com/disclaimer.html">
+  <meta property="og:title" content="Legal Disclaimer | Wevolv3">
+  <meta property="og:description" content="Wevolv3 Legal Disclaimer - Important information about our services, content, and limitations of liability.">
+  <meta property="og:image" content="https://wevolv3.com/images/LOGO.PNG">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Legal Disclaimer | Wevolv3">
+  <meta name="twitter:description" content="Wevolv3 Legal Disclaimer">
+  <meta name="twitter:image" content="https://wevolv3.com/images/LOGO.PNG">
+  
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E7E4GJ0QP9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-E7E4GJ0QP9');
+  </script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet" type="text/css" />
   <link href="css/layout.css" rel="stylesheet" type="text/css" />
   <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
+  <link href="images/favicon.png" rel="apple-touch-icon" />
+  
   <style>
     .legal-content {
       color: #fff;
@@ -46,6 +76,27 @@
   </style>
 </head>
 <body>
+  <div class="header">
+    <div class="w-layout-blockcontainer main-container w-container">
+      <div id="home" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="header-inner w-nav">
+        <a href="index.html" aria-current="page" class="logo w-inline-block">
+          <img src="images/LOGO.PNG?v=4" alt="Wevolv3" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';" />
+          <span class="logo-text-fallback" style="display:none; color: white; font-family: 'Orbitron', monospace; font-weight: 900; font-size: 28px; text-transform: uppercase; letter-spacing: 0.1em;">WEVOLV3</span>
+        </a>
+        <nav role="navigation" class="main-menu w-nav-menu">
+          <a href="index.html" class="menu-item w-nav-link">Home</a>
+          <a href="about.html" class="menu-item w-nav-link">About</a>
+          <a href="works.html" class="menu-item w-nav-link">work</a>
+          <a href="blog.html" class="menu-item w-nav-link">blog</a>
+          <a href="contact.html" class="menu-item w-nav-link">contact</a>
+        </nav>
+        <div class="menu-button w-nav-button">
+          <div class="icon w-icon-nav-menu"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Main Content -->
   <div class="w-layout-blockcontainer main-container w-container" style="padding-top: 100px; padding-bottom: 60px;">
     <h1 class="main-title" style="text-align: center; margin-bottom: 30px;">Legal Disclaimer</h1>
@@ -180,5 +231,7 @@
       </div>
     </div>
   </div>
+  
+  <script src="js/plugins.js" type="text/javascript"></script>
 </body>
 </html>
