📝 Update: Altera '40+ Blockchain Projects' para '40+ advertising solutions'
- Substitui texto na seção de números/estatísticas
- Mantém consistência com foco em soluções de publicidade

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         <div class="number-circle circle-dark"></div>
                         <div class="number-text-box">
                             <div class="number-text-big">40+</div>
-                            <div class="number-text-small">Blockchain Projects</div>
+                            <div class="number-text-small">advertising solutions</div>
                         </div>
                     </div>
                     <div data-w-id="darkyn16" style="opacity: 0;" class="numbers-item numbers-item-dark">
