✨ Centraliza textos do THE PATH e atualiza título do blog
- Adiciona justify-content: center nos cards do THE PATH para centralizar conteúdo verticalmente
- Remove margin-top: auto do texto dos cards para melhor centralização
- Reduz margin-bottom do título dos cards de 20px para 15px
- Altera título da seção blog de 'insights' para 'guides & insights'

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 
         <div class="blog-section">
             <div class="w-layout-blockcontainer main-container w-container">
-                <h2 class="main-title">insights</h2>
+                <h2 class="main-title">guides & insights</h2>
 
                 <div class="blog-list-wrapper w-dyn-list">
                     <div role="list" class="blog-list w-dyn-items">
