feat: Integração Telegram bot + formulário de contato com campos de auditoria
- Adicionada Netlify Function sendTelegram.js para envio de mensagens ao Telegram
- Formulário de contato atualizado com campos para auditoria prévia:
  * Project Type (dropdown)
  * Budget Range (dropdown)
  * Timeline (dropdown)
  * Main Challenge/Goal (textarea obrigatório)
  * Additional Details (textarea opcional)
- Mensagem do Telegram formatada com estrutura clara e emojis
- CSS atualizado para selects mantendo estilo do projeto
- Correções de UI do formulário de contato
- Adicionado campo 'SEE MORE' na seção blog
- Melhorias de responsividade e validação

--- a/index.html
+++ b/index.html
@@ -571,7 +571,10 @@
 
         <div class="blog-section">
             <div class="w-layout-blockcontainer main-container w-container">
-                <h2 class="main-title">guides & insights</h2>
+                <div class="main-title-box">
+                    <h2 class="main-title">blog</h2>
+                    <a href="blog.html" class="all-projects">SEE MORE</a>
+                </div>
 
                 <div class="blog-list-wrapper w-dyn-list">
                     <div role="list" class="blog-list w-dyn-items">
